server-conf/etc/rules.v4
*filter

# Reset firewall
-F
-X
-Z

# Drop all inbound traffic by default
-P INPUT DROP

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT
-A OUTPUT -d 127.0.0.0/8 -j REJECT

# Allow established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow echo-requests & replies
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Allow SSH
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Allow HTTP & HTTPS
-A INPUT -p tcp --match multiport --dport 80,443 -j ACCEPT

# Drop all outbound by default (Only in prod)
-P OUTPUT DROP

# Allow echo-requests & replies
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Allow established connections
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow UDP outbound
-A OUTPUT -p udp -j ACCEPT

COMMIT
